force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <label>Property</label>
    <pluralLabel>Properties</pluralLabel>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Address__c</fullName>
        <type>Text</type>
        <label>Address</label>
        <length>255</length>
        <required>true</required>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <type>Text</type>
        <label>City</label>
        <length>100</length>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <type>Text</type>
        <label>State</label>
        <length>50</length>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <type>Text</type>
        <label>Zip Code</label>
        <length>20</length>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <type>Currency</type>
        <label>Price</label>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <type>Number</type>
        <label>Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <type>Number</type>
        <label>Bathrooms</label>
        <precision>2</precision>
        <scale>1</scale>
    </fields>
    <fields>
        <fullName>Square_Feet__c</fullName>
        <type>Number</type>
        <label>Square Feet</label>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <type>Picklist</type>
        <label>Property Type</label>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <type>Picklist</type>
        <label>Status</label>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Under Contract</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listing_Date__c</fullName>
        <type>Date</type>
        <label>Listing Date</label>
    </fields>
</CustomObject>