force-app/main/default/objects/Property__c/fields/IsDuplicate__c.field-meta.xml
<CustomField>
    <fullName>IsDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicate</label>
    <type>Checkbox</type>
</CustomField>