force-app/main/default/objects/Property__c/fields/Last_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Approval_Date__c</fullName>
    <description>Date when the property was last approved</description>
    <label>Last Approval Date</label>
    <type>Date</type>
</CustomField>