force-app/main/default/objects/Property__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <type>Lookup</type>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Property_Visits</relationshipLabel>
    <relationshipName>Property_Visits</relationshipName>
    <required>true</required>
</CustomField>