force-app/main/default/objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Family</fullName>
                <label>Single Family Home</label>
            </value>
            <value>
                <fullName>Condo</fullName>
                <label>Condominium</label>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Multi Family</fullName>
                <label>Multi-Family Home</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <label>Commercial Property</label>
            </value>
            <value>
                <fullName>Apartment</fullName>
                <isActive>false</isActive>
                <label>Apartment</label>
            </value>
            <value>
                <fullName>Land</fullName>
                <isActive>false</isActive>
                <label>Land</label>
            </value>
            <value>
                <fullName>Residential</fullName>
                <isActive>false</isActive>
                <label>Residential</label>
            </value>
            <value>
                <fullName>Villa</fullName>
                <isActive>false</isActive>
                <label>Villa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>