force-app/main/default/objects/Property__c/fields/Size_sqft__c.field-meta.xml
<CustomField>
    <fullName>Size_sqft__c</fullName>
    <label>Size (sqft)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>