force-app/main/default/objects/Property__c/fields/Visit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Visit_DateTime__c</fullName>
    <type>DateTime</type>
    <label>Visit Date/Time</label>
    <required>true</required>
</CustomField>