force-app/main/default/objects/Property__c/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <description>Commercial properties including offices, retail spaces, and industrial buildings</description>
    <label>Commercial</label>
</RecordType>