force-app/main/default/objects/Property__c/validationRules/Property_Price_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_Price_Positive</fullName>
    <active>true</active>
    <description>The listing price must be a positive value.</description>
    <errorConditionFormula>OR(
  ISBLANK(Asking_Price__c),
  Asking_Price__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Asking Price must be greater than 0.</errorMessage>
</ValidationRule>